<resources>
    <string name="app_name">DustTest</string>
    <string name="debug_menu">Debug Menu</string>
    <string name="readALLDB">readAllData</string>
    <string name="send">send</string>
    <string name="pathToData">Path to Data</string>
    <string name="error">Error</string>
    <string name="query">query</string>
    <string name="noValueKey">No value for path:</string>
    <string name="listDB">listDB</string>
    <string name="loading">Loading</string>
    <string name="latest">latest</string>
    <string name="noData">No Value</string>
</resources>
